2009-01-25 Fred Kiefer <FredKiefer@gmx.de>

	* TextConverters/RTF/RTFProducer.m (RTFDProducer -produceFileFrom:...):
	Always create a directory, even for simple RTF files.

2009-01-25 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSDocument.m (-runModalSavePanelForSaveOperation:...): 
	Correct the name of the selector being tested.

2009-01-24 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSDocumentController.m (-validateUserInterfaceItem:):
	Show newDocument: only if there is a default type.

2009-01-23 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSWindow.m: ignore invalid rects when checking
	tracking rectangles.

2009-01-23 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSMenuView.m: Convert between the window and the view 
	coordinate system.
	* Source/NSDocument.m (dataOfType:error:): Call dataRepresentationofType: 
	when that method was overriden. 
	* Source/NSDocument.m (writeToURL:ofType:error:): Use dataOfType:error:
	instead of dataRepresentationofType:. 

2009-01-22 Fred Kiefer <FredKiefer@gmx.de>

	* Source/GSWindowDecorationView.m: Add handling of in-window
	menu. Simplify code for toolbar handling.
	* Source/NSToolbarFrameworkPrivate.h: Publish ne methods.
	* Source/NSWindow.m (-setMenu:): Set the menu as in-window menu.
	* Source/NSMenuView.m: Set the frame width to the screen width in
	setHorizontal: and not in sizeToFit.

2009-01-21 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSOutlineView.m: Don't ask if the topmost item is expandable.
	On MacOS-X the delegate is not asked ... we just assume that it is.
	Fix for bug #25369

2009-01-20  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSImage.m (-compositeToPoint:fromRect:operation:,
	-compositeToPoint:fromRect:operation:fraction:,
	-dissolveToPoint:fromRect:fraction:): Fix invalid return
	statements between NS_DURING and NS_HANDLER.

2009-01-19 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSAnimation.m (-_gs_startAnimationInOwnLoop): Use an auto
	release pool inside of the loop.